# coremusic

./: .gitignore  .pre-commit-config.yaml  404.html  API.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COVERAGE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  PROJECT_REVIEW.md  README.md  TODO.md  audio_player.c  audio_player.h  audio_player.pxd  changes.diff  coreaudio.c  coreaudio.pxd  coreaudio.pyx  demo_async_io.py  demo_utilities.py  index.html  mk_enum.py  mkdocs.yml  objects.inv  out.h  play_amen.py  pyproject.toml  real_audio_player.py  setup.py  sitemap.xml
.github/: CICD_README.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  comprehensive-tests.yml  coverage.yml  docs.yml  release.yml
api/: index.html
api/audio_file/: index.html
api/quickstart/: index.html
benchmarks/: bench_performance.py
cookbook/: index.html
cookbook/audio_processing/: index.html
cookbook/audiounit_hosting/: index.html
cookbook/common_patterns/: index.html
cookbook/file_operations/: index.html
cookbook/link_integration/: index.html
cookbook/midi_processing/: index.html
cookbook/real_time_audio/: index.html
demos/: README.md  host_au_chain.py  link_sequencer.py  output_stream_tone.py  render_midi_to_wav.py
dev/ableton_link/: index.html
dev/api/: index.html
dev/api-reference/: index.html
dev/audiounit_host/: index.html
dev/audiounit_implementation/: index.html
dev/audiounit_name_lookup/: index.html
dev/complex_audio_conversion/: index.html
dev/coverage/: index.html
dev/dependency_audit/: index.html
dev/error_decorator/: index.html
dev/implementation_summary/: index.html
dev/links/: index.html
dev/type_stubs_summary/: index.html
dev/useful-info/: index.html
docs/: COOKBOOK.md  ERROR_DECORATOR.md  IMPORT_GUIDE.md  MIGRATION_GUIDE.md  Makefile  PERFORMANCE_GUIDE.md  README.md  audiounit_name_lookup.md  complex_audio_conversion.md  conf.py  coverage.md  endpoint.c  getting_started.md  getting_started.rst  index.md  index.rst  link_integration.md  quickstart.md  quickstart.rst  type_stubs_summary.md  useful-info.md
docs/api/: audio_file.md  audio_file.rst  index.md  index.rst  quickstart.md  quickstart.rst
docs/cookbook/: audio_processing.md  audio_processing.rst  audiounit_hosting.md  audiounit_hosting.rst  common_patterns.md  common_patterns.rst  file_operations.md  file_operations.rst  index.md  index.rst  link_integration.md  link_integration.rst  midi_processing.md  midi_processing.rst  real_time_audio.md  real_time_audio.rst
docs/dev/: DOCUMENTATION.md  ableton_link.md  api-reference.md  api.md  audiounit_host.md  audiounit_implementation.md  audiounit_name_lookup.md  complex_audio_conversion.md  coverage.md  dependency_audit.md  error_decorator.md  implementation_summary.md  kann.md  links.md  project_review.md  type_stubs_summary.md  useful-info.md
docs/examples/: audio_inspector.md  audio_inspector.rst  index.md  index.rst
docs/guides/: cli.md  cli.rst  imports.md  imports.rst  index.md  index.rst  migration.md  migration.rst  performance.md  performance.rst
docs/tutorials/: async_audio.md  async_audio.rst  audio_file_basics.md  audio_file_basics.rst  audio_playback.md  audio_playback.rst  audio_recording.md  audio_recording.rst  effects_processing.md  effects_processing.rst  index.md  index.rst  midi_basics.md  midi_basics.rst  midi_transform.md  midi_transform.rst  music_theory.md  music_theory.rst
examples/: index.html
examples/audio_inspector/: index.html
getting_started/: index.html
guides/: index.html
guides/cli/: index.html
guides/imports/: index.html
guides/migration/: index.html
guides/performance/: index.html
link_integration/: index.html
quickstart/: index.html
scripts/: convert.py  fourcc.py  mk_enum.py  test_clean_install.sh
search/: search_index.json
src/coreaudio/: audiotoolbox.pxd  capi.c  capi.pyx  coreaudio.pxd  coreaudiotypes.pxd  corefoundation.pxd  coremidi.pxd
src/coremusic/: __init__.py  __init__.pyi  __main__.py  async_io.py  audio_player.c  audio_player.h  audio_player.pxd  audio_unit_host.py  audiotoolbox.pxd  base.py  buffer_utils.py  capi.c  capi.pxd  capi.pyi  capi.pyx  constants.py  coreaudio.pxd  coreaudiotypes.pxd  corefoundation.pxd  coremidi.pxd  daw.py  exceptions.py  kann.pxd  kann.pyx  link.cpp  link.pxd  link.pyx  link.pyx.bak  link_midi.py  log.py  objects.c  objects.py  objects.pyi  objects.pyx  oo.py  os_status.py  scipy_utils.py  shortcuts.py  utilities.py
tests/: Makefile  conftest.py  demo.mid  test_async_io.py  test_audio.c  test_audio_analysis.py  test_audio_async_io.py  test_audio_clock.py  test_audio_file_format_data.py  test_audio_file_stream.py  test_audio_player.py  test_audio_services.py  test_audio_slicing.py  test_audio_streaming.py  test_audio_visualization.py  test_audiotoolbox.py  test_audiotoolbox_audio_converter.py  test_audiotoolbox_audio_file.py  test_audiotoolbox_audio_file_stream.py  test_audiotoolbox_audio_queue.py  test_audiotoolbox_audio_services.py  test_audiotoolbox_extended_audio_file.py  test_audiotoolbox_music_device.py  test_audiotoolbox_music_player.py  test_audiounit.py  test_audiounit_host.py  test_audiounit_host_enhancements.py  test_audiounit_host_highlevel.py  test_audiounit_midi.py  test_augraph.py  test_batch_processing.py  test_buffer_pool.py  test_buffer_utils.py  test_cli_doctor.py  test_constants.py  test_convert.py  test_coreaudio.py  test_coremidi.py  test_coverage_improvements.py  test_cycoreaudio.py  (+41 more)
tests/c/: test_cf.c  test_sin.c  test_sin2.c
tests/demos/: README.md  actual_audio_player.py  async_io.py  audio_analysis.py  audio_slicing.py  audio_visualization.py  audiounit_advanced.py  audiounit_browser_demo.py  audiounit_highlevel.py  audiounit_instrument.py  batch_processing.py  complete_audio_player.py  daw.py  demo_advanced_audiounit.py  demo_audio_slicing.py  demo_audio_visualization.py  demo_daw.py  demo_midi_render.py  demo_midi_utilities.py  demo_oo_api.py  demo_streaming.py  (+21 more)
tutorials/: index.html
(+144 files in other folders)
